html/css/style.css
@font-face
{
	font-family: gill_header;
	src: url('../fonts/gsa_wg-webfont.woff')
}
@font-face
{
	font-family: gill;
	src: url('../fonts/gsa_wg_l-webfont.woff')
}
family:'GillSansAltOneWGLLightRegular';src:url('/fonts/gsa_wg_l-webfont.eot');src:url('/fonts/gsa_wg_l-webfont.eot?#iefix') format('embedded-opentype'),url('/fonts/gsa_wg_l-webfont.woff') format('woff'),url('/fonts/gsa_wg_l-webfont.ttf') format('truetype'),url('/fonts/gsa_wg_l-webfont.svg#GillSansAltOneWGLLightRegular') format('svg');font-weight:normal;font-style:normal}@font-face{font-family:'GillSansAltOneWGLRegular';src:url('/fonts/gsa_wg-webfont.eot');src:url('/fonts/gsa_wg-webfont.eot?#iefix') format('embedded-opentype'),url('/fonts/gsa_wg-webfont.woff') format('woff'),url('/fonts/gsa_wg-webfont.ttf') format('truetype'),url('/fonts/gsa_wg-webfont.svg#GillSansAltOneWGLLightRegular') format('svg');font-weight:normal;font-style:normal}
*{
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);	
}
body{
	position: absolute;
	top: 0px;
	right: 0px;
	left: 0px;
	bottom: 0px;
	overflow: hidden;
	margin: 0px;
	font-family: gill;
}
#error{
	position: absolute;
	bottom: 0px;
	left: 0px;
	right: 0px;
	height: 0px;
	background: #999;
	color: #FF0000;
	opacity: 0;
	z-index: 10;
	margin: 10px 20px;
	text-align: center;
}
#loading{
	position: absolute;
	top: 50%;
	left: 50%;
	width: 50px;
	height: 50px;
	margin-left: -25px;
	margin-top: -25px;
	background: url('../img/ajax-loader.gif') no-repeat center;	
	z-index: 10000;
	display: none;
}
.panel{
	position: absolute;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	overflow: hidden;

}
.panel.modal{
	top: 10px;
	bottom: 10px;
	left: 10px;
	right: 10px;	
	z-index: 4;
	max-width: 400px;
	opacity: 0;
	display: none;
	/*transition: all 0.4s ease-out, height 0.4s ease-out 0.4s;
	-webkit-transition: all 0.4s ease-out, height 0.4s ease-out 0.4s;		*/
}
.btn{
	float: left;
	padding-top: 36px;
	border: 1px solid #1f1f1f;
	background: #1f1f1f;
	width: 25%;
	height: 60px;
	display: block;
	color: #fff;
	box-sizing:border-box;
	-webkit-box-sizing:border-box;
	-moz-box-sizing: border-box;
}
.btn_close{
	width: 40px;
	height: 40px;
	position: absolute;
	top: 0px;
	right: 0px;
	padding: 10px 0 0 0;
	text-align: center;
	color: #fff;
	font-size: 15px;
	font-weight: bold;
}
.panel_header{
	position: absolute;
	top: 0px;
	left: 0px;
	
	width: 100%;
	height: 40px;
	background: #1f1f1f;
	color: #fff;
}
.panel_header h2{
	padding-left: 30px;
}
.panel_header .btn{
	border: none;
}
#filter_panel .panel_header{
	background: #272c2d url('../img/filter.svg') no-repeat 5px 6px;	
	background-size: auto 70%!important;
}
#explain_panel .panel_header{
	background: #272c2d url('../img/faq.svg') no-repeat 5px 6px;	
	background-size: auto 70%!important;
}
#bookmarks_panel .panel_header{
	background: #272c2d url('../img/favorite.svg') no-repeat 5px 6px;	
	background-size: auto 70%!important;	
}
.modal_content{
	position: absolute;
	top: 40px;
	bottom: 0px;
	width: 100%;
	overflow: auto;
}
#title_bar{
	position: absolute;
	top: 0px;
	background: #262626;
	height: 60px;
	width: 100%;	
	z-index: 2000;

}
#btn_back{
	width: 60px;
	height: 60px;
	top: 0px;
	left: 0px;
	background:url('../img/back_btn.png') no-repeat 20px 12px;
	background-size: auto 55%;
	display: none;
}

.hide{
	display: none;
}
#toggle_favourite{
	width: 60px;
	height: 60px;
	position: absolute;
	top: 0px;
	right: 0px;	
	background:url('../img/topfavorite.svg') no-repeat 5px 15px;	
	background-size: auto 45%;
	display: none;
}
#toggle_favourite.selected{
	background-image:url('../img/favorite.svg');	
}
#info{
	position: absolute;
	bottom: 0px;
	right: 60px;
	left: 60px;
	top: 0px;
	text-align: center;

}

.info_wrapper{
	display: block;
  	vertical-align: middle;
	margin: auto 0px;
}
#region_name{
	color: #fff;
	font-size: 22px;
	height: 22px;
	font-family: gill;
	padding-top: 5px;
}
#filter_breadcrumb_wrapper{
	display: block;
	width: 100%;
	padding: 5px 0px;
	color: #fff;
	font-size: 12px;
	overflow: hidden;
	text-align: center;
}
#filter_breadcrumb{
	height: 15px;
	width: auto;
	
}
#menu_bar{
	position: absolute;
	bottom: 0px;
	height: 60px;
	padding: 0;
	margin: 0;
	width: 100%;
	text-align: center;
	z-index: 10000;
	background: #272c2d;
}
#menu_bar .btn{
	background-size: auto 80%;
	font-size:12px;
	color: #fff;
}
#btn_bookmarks{
	background: #272c2d url('../img/favorite.svg') no-repeat 50% 10px;	
	background-size: auto 30%!important;
}
#btn_filter{
	background: #272c2d url('../img/filter.svg') no-repeat 50% 10px;	
	background-size: auto 30%!important;
}
#btn_explain{
	background: #272c2d url('../img/faq.svg') no-repeat 50% 8px;	
	background-size: auto 30%!important;
}
#btn_logout{
	background: #272c2d url('../img/logout.svg') no-repeat 50% 10px;	
	background-size: auto 30%!important;
}
.btn_close{
	background: url('../img/close_icon.svg') no-repeat 50% 50%;
	background-size: 50% auto;
}
#app_panel{
	display: block;
	z-index: 1;
}
#app_wrapper{
	position: absolute;
	top: 60px;
	bottom: 60px;
	left: 0px;
	right: 0px;
}
#map{
	position: absolute;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	background-size: auto 100%;
	background-position: fixed;
	z-index: 10;
}
#region_info{
	position: absolute;
	top: -40%;
	left: 0px;
	right: 0px;
	height: 40%;
	width: 100%;
	background-color: #007aa7;
	z-index: 20;
	-webkit-box-shadow: inset 0 8px 6px -6px black;
	-moz-box-shadow: inset 0 8px 6px -6px black;
	box-shadow: inset 0 10px 60px -20px black;	
}
.svg_wrapper{
	position: absolute;
	width: 50%;
	bottom: 0px;
	height: 100%;
}

path#arc_path, circle#background, path#arc_path_left{
	fill: none;
	stroke-width: 20;       	
}

path#arc_path {
    opacity: 0.4;
    stroke: #000000;
}
path#arc_path_left{
    opacity: 0.6;
    stroke: #000000;
}
circle#background{
	stroke-opacity: .1;
	stroke: #efefef;
}
.data_wrapper{
	position: absolute;
	width: 50%;
	bottom: 0px;
	left: 50%;
	height: 100%;
	display: block;
}
/* ... */

